# hello_opengl

./: .gitignore  CMakeLists.txt  README.md
res/shaders/: basic.shader
src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShapeData.h  Texture.cpp  Texture.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  defines.h  main.cpp
src/Primitives/: ShapeData.h  ShapeGenerator.cpp  ShapeGenerator.h  Vertex.h
