project (hello_opengl)
cmake_minimum_required(VERSION 3.0.0)

message("PROJECT " ${PROJECT_NAME}:)
message("BUILD DIR " ${CMAKE_CURRENT_BINARY_DIR})
message("SRC DIR " ${CMAKE_CURRENT_SOURCE_DIR})

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/src SRC)
#message("SRC LIST: " ${SRC})
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/src/vendor/stb STB)
set (IMGUIDIR ${CMAKE_CURRENT_SOURCE_DIR}/src/vendor/imgui-1.61)
aux_source_directory(${IMGUIDIR} IMGUI)
aux_source_directory(${IMGUIDIR}/examples/opengl3_example IMGUIEX)
message("IMGUI")
message(${IMGUI})
message("IMGUI EXAMPLES")
message(${IMGUIEX})


message ("STB: " ${STB})
set(INCLUDEDIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
include_directories(${INCLUDEDIR})
include_directories(${INCLUDEDIR}/GLEW/include)
include_directories(${IMGUIDIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/vendor)


find_package(OpenGL)
message("OPENGL FOUND " ${OPENGL_FOUND} " " ${OPENGL_GLU_FOUND})

if (UNIX)
#    add_compile_options(-glfw3)
    message("OPENGL_INCLUDE_DIR " ${OPENGL_INCLUDE_DIR})
endif()
add_executable(${PROJECT_NAME} ${SRC} ${STB} ${IMGUI} ${IMGUIEX})

if (UNIX)
    find_library(COCOA Cocoa)
    message ("COCOA " ${COCOA})
    find_library(COREVIDEO CoreVideo)
    message ("COREVIDEO " ${COREVIDEO})
    find_library(IOKIT IOKit)
    message ("IOKit " ${IOKIT})
    find_library(APPKIT AppKit)
    message ("APPKIT " ${APPKIT})
    find_library(OPENGLFW OpenGL)
    message ("Open GL " ${OPENGLFW})
    target_link_libraries(${PROJECT_NAME} ${OPENGLFW} ${COCOA} ${COREVIDEO} ${IOKIT} ${APPKIT})

    target_include_directories(${PROJECT_NAME} PUBLIC ${OPENGL_INCLUDE_DIR})
    find_library(GLEW libGLEW.dylib HINTS /usr/local/lib/)
    find_library(LIBVC15 libglfw.3.2.dylib HINTS /usr/local/lib/)
else()
    find_library(GLEW glew32s HINTS ${INCLUDEDIR}/GLEW/lib/Release/x64)
    find_library(LIBVC15 glfw3 HINTS ${INCLUDEDIR}/GLFW)
endif()

message("LIBS:")
message("GLEW " ${GLEW})
message("GLFW " ${LIBVC15})
message("OPENGL_gl_LIBRARY " ${OPENGL_gl_LIBRARY})
message("OPENGL_glu_LIBRARY " ${OPENGL_glu_LIBRARY})

target_link_libraries(${PROJECT_NAME} ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY}
    ${GLEW} ${LIBVC15})
